[tool.poetry]
name = "hmpps-person-match-score"
version = "0.1.0"
description = ""
authors = ["Mark Berridge <mark.berridge@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Metaphone = "^0.6"
numpy = "^1.21.2"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
six = "^1.16.0"
splink = "^3.4.0"
pandas = "^1.3.3"
Flask = "^2.1.1"
click = "^8.1.2"
gunicorn = "^20.1.0"
opencensus-ext-azure = "^1.1.5"
opencensus-ext-flask = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
