[tool.poetry]
name = "hmpps_person_record_python"
version = "0.1.0"
description = ""
authors = ["Mark Berridge <mark.berridge@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
splink = "^3.4.0"
pandas = "^1.3.3"



[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
